DTOs para los insert + FotoAccesoDatos BloqueAccesoDatos editado+ Rest de ambos Pendiente
