# slab/src/main/java/com/ipartek/formacion/slab/dtos/BloqueDTO.java
@@ -2,7 +2,8 @@ package com.ipartek.formacion.slab.dtos;
 
 import java.util.ArrayList;
 
-public record BloqueDTO(Long id, String nombre, RocodromoDTO rocodromo, GradoDTO grado,
-		LeerRouteSetterDTO routeSetter, ArrayList<EscaladorDTO> usuarios, FotoDTO foto) {
+public record BloqueDTO(Long id, String nombre, RocodromoDTO rocodromo, GradoDTO grado, LeerRouteSetterDTO routeSetter,
+		ArrayList<EscaladorDTO> usuarios, FotoDTO foto) {
+
 
 }
