# slab/src/main/java/com/ipartek/formacion/slab/dtos/InsertBloqueDTO.java
@@ -1,0 +1,4 @@
+package com.ipartek.formacion.slab.dtos;
+
+public record InsertBloqueDTO(String nombre, IdRocodromoDTO rocodromo, GradoDTO grado, IdRouteSetterDTO routeSetter, FotoDTO foto) {
+}
