# slab/src/main/webapp/openapi/slab.yml
@@ -51,6 +51,40 @@ paths:
                 schema: 
                   $ref: '#/components/schemas/Rocodromo'
 
+  /fotos:
+    post:
+      tags:
+        - fotos
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Rocodromo'
+        required: true
+      responses:
+        '201':
+          description: CREATED
+          content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Rocodromo'
+    get:
+      tags:
+      - fotos
+      parameters:
+        - name: id 
+          in: path
+          required: true
+          schema: 
+            type: integer
+            format: int64
+      responses:
+          '200':
+            description: OK
+            content:
+              application/json:
+                  schema:
+                    $ref: '#/components/schemas/Rocodromo'
 
   /rocodromos/{id}:
     get:
